...
import UIKit
import RxSwift
import SVProgressHUD

class ProductDetailViewController: BaseViewController {

    @IBOutlet weak var tableView: UITableView!
    
    var viewModel: ProductDetailViewModel!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        SVProgressHUD.show()
        viewModel.load()
    }
    
    override func configureAppearance() {
        super.configureAppearance()
        title = "Detail"
        navigationController?.setNavigationBarHidden(false, animated: true)
        setNavigationBarStyle(translucent: false, backgroundColor: .coolBlue, titleColor: .white)
        
        tableView.rowHeight = UITableViewAutomaticDimension
        tableView.estimatedRowHeight = 40
        tableView.tableFooterView = UIView()
...
