...
            <objects>
                <viewController storyboardIdentifier="SearchViewController" id="WBQ-hq-rBv" customClass="SearchViewController" customModule="BlueSales" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="lzV-04-bp3">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="Search Product" translatesAutoresizingMaskIntoConstraints="NO" id="25t-ft-Zyd">
                                <rect key="frame" x="0.0" y="306" width="375" height="56"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="56" id="4ac-Qp-5cs"/>
                                </constraints>
                                <color key="barTintColor" red="0.22745098039215686" green="0.56470588235294117" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
...
